some minor updates

--- a/options.html
+++ b/options.html
@@ -20,7 +20,7 @@
       <div>
         <label>
           <input id="enable-gifs" type="checkbox" name="enableGIFs" checked />
-          Show me animated GIFs
+          Show me animated GIFs (provided by Giphy)
         </label>
       </div>
     </div>
